# cmake_embeded_project

./: .gitignore
Cmake_Test/: CMakeLists.txt  toolchain.cmake
